ability to choose from themes

--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,9 @@
 
     <section id="chooseTheme">
      <h2>Themes</h2>
-     <ul id="themes">
-     </ul>    
+     <p>Choose a theme by clicking on its preview</p>
+     <div id="themes">
+     </div>    
    </section>
 
     <section id="copyTheme">
