--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,18 @@
 </head>
 <body>
 
+  <header>
   <div class="row">
-    <div class="column large-12">
+      <div class="column small-12">
+        <h1>XBMCMovieList</h1>
+      </div>
+    </div>
+  </header>
+
+  <div class="row">
+    <div class="column small-12">
 
       <section id="welcome">
-        <h1>MovieList</h1>
         <p>With this little sneaky tool you are able to create a snapshot of your XBMC-Library which you are then able to share with your friends via Dropbox or other alike tools.</p>
 
         <div class="buttonwrap">
@@ -24,7 +31,6 @@
       </section>
 
       <section id="location">
-       <h2>XBMC-Location</h2>
        <p>Lets start of by locating your XBMC-installation by providing its IP</p>
        <input id="xbmcUrl" type="text" placeholder="10.0.0.3">
      </section>
@@ -62,6 +68,16 @@
 
  </div>
 </div>
+
+  <footer>
+    <div class="row">
+      <div class="column small-6">
+        <p>You are running version <span class="version"></span></p>
+      </div>
+      <div class="column small-6">
+      </div>
+    </div>
+  </footer>
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/jquery-ui.js"></script>
