--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,7 @@
         <p>You are running version <span class="version"></span></p>
       </div>
       <div class="column small-6">
+        <p class="update right"></p>
       </div>
     </div>
   </footer>
