--- a/src/index.html
+++ b/src/index.html
@@ -60,8 +60,9 @@
     <section id="chooseTheme">
      <h2>Themes</h2>
      <p>Choose a theme by clicking on its preview</p>
-     <div id="themes">
-     </div>    
+     <div id="themes" class="row">
+     </div>
+     <br><br>
    </section>
 
    <section id="copyTheme">
@@ -70,9 +71,15 @@
    </section>
 
    <section id="finished">
-     <h2>\o/</h2>
-     <p>Wooohooo! Your final list is stored in <a href="#" id="openList">./out</a></p>  
-     <p>You may also <a href="./index.html">start over</a> again</p>
+    <br>
+    <div class="text-center">
+      <h2>\o/</h2>
+    </div>
+    <br>
+    <ul class="button-group">
+      <li><a href="./index.html" class="button secondary">start over</a></li>
+      <li><a href="#" id="openList" class="button">Open in your browser</a></li>
+    </ul>
    </section>
 
  </div>
